# fastbit

./: CMakeLists.txt
examples/: CMakeLists.txt
src/: CMakeLists.txt  capi.h  const.h
tests/: CMakeLists.txt  readcsv.cpp
